--- a/Frontend/src/Pages/LandingPage/LandingPage.css
+++ b/Frontend/src/Pages/LandingPage/LandingPage.css
@@ -350,3 +350,44 @@ button  {
 
 
 }
+
+
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+  font-size: small;
+}
+
+.popup-content {
+  background: white;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  font-size: small;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.popup-content h5 {
+  margin-top: 0;
+}
+
+.popup-content a {
+  display: block;
+  margin: 0px 0;
+}
+
+.popup-content button {
+  margin-top: 10px;
+  align-self: flex-end;
+}
