--- a/Frontend/src/Pages/Placements/PlacementsPage.css
+++ b/Frontend/src/Pages/Placements/PlacementsPage.css
@@ -8,6 +8,22 @@
     margin-bottom: 20px;
   }
   
+
+  .filter-dropdown {
+    margin-bottom: 20px;
+  }
+  
+  .filter-dropdown label {
+    margin-right: 10px;
+    font-weight: bold;
+  }
+  
+  .filter-dropdown select {
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+  }
   .placement-cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
